--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,109 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+*{
+  margin: 0;
+  padding: 0;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  
+}
+main {
+  display: flex;
+  padding-top: 50px;
+  padding-left: 200px;
+  padding-right: 200px;
+  background-color: #1c5380;
+  height: 220px;
+  background-repeat: no-repeat;
+  
+
+
+}
+.card{
+  display:flexbox;
+  justify-content: center;
+  align-items: stretch;  
+  
+}
+div {
+  display: flex;
+  
+}
+.instagramlogo{
+  margin-top: 30px;
+}
+button {
+  background-color: #1c5380;
+  color: #ffffff;
+  display: flex;
+  font-weight: 200;
+  padding: 8px 25px;
+  margin-left: 170px;
+  margin-top: 48px;
+  border-radius: 2px;
+  border-style: solid;
+  border-color: #06365f;
+  
+}
+
+
+.phone_capture {
+margin: 50px;
+height: 400px;
+}
+
+.info{
+  padding: 30px 30px;
+  background-color: #ffffff;
+  border-radius: 4px;
+  background-image: url("/images/frame.png");
+
+}
+h1{
+color:#06365f;
+font-weight: bold;
+width: 60%;
+font-size: 24px;
+margin-bottom: 10px;
+}
+
+p{
+  padding-bottom: 16px;
+}
+
+.downloadbtn{
+  margin-right: 20px;
+}
+
+footer{
+  display: flex;
+  justify-content: center;
+  margin-top: 340px;
+  
+}
+footer ul{
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  
+}
+footer ul li a {
+  text-transform: uppercase;
+  color: #06365f;
+  font-weight:bold;
+  font-size: 14px;
+  padding: 10px 20px;
+  text-decoration: none;
+}
+span{
+  text-transform: uppercase;
+  color: #808080;
+  font-weight:bold;
+  font-size: 14px;
+  padding: 0px 20px;
+  margin-bottom: 20px;
+  
 }
