--- a/styles/style.css
+++ b/styles/style.css
@@ -7,9 +7,12 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   background-image:url(/images/frame.png);
-  background-color:#06365f;
+  background:repeat-x;
 }
 
+main {
+  displayflex;
+}
 
 
 .log-in-button {
