--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   background-image:url('/images/frame.png');
+  background-size: 100%;
   background:repeat-x;
   background-color: #06365f
 }
