--- a/styles/style.css
+++ b/styles/style.css
@@ -6,8 +6,7 @@
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-  background-image:url('/images/frame.png');
-  background-size: 100%;
+  background-image:url('/images/bgtile.png');
   background:repeat-x;
   background-color: #06365f
 }
