--- a/styles/style.css
+++ b/styles/style.css
@@ -5,14 +5,18 @@
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
-  background-image:url('/images/bgtile.png');
-  background:repeat-x;
-  background-color: #06365f
+  margin: 80px;
+  background-color: white;
+  background-image:url(/images/bgtile.png);
+  background-repeat:repeat-x;
+  display:flex;
+  flex-direction: colum;
 }
 
-main {
-  displayflex;
+p {
+  font-weight: 300;
+  font-size: .9em;
+  margin-bottom: 30px;
 }
 
 
