--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,91 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+*{
+  padding:0;
+  margin:0;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url('/bgtile.png');
+  background-repeat: repeat-x;
+  
+}
+header{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 63%;
+}
+.phones{
+  float: left;
+  margin: 50px 80px;
+}
+.igLogo{
+  width: 90%;
+}
+section {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 50px 80px;
+}
+header{
+  display: flex;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+article{
+  float: right;
+  font-size: 150;
+  width: 60%;
+  padding: 10px 20px;
+  background-image: url('/frame.png');
+  background-repeat: no-repeat;
+  margin-left: 20px;
+}
+
+article p, h1, a{
+  margin-left: 45px;
+  margin-bottom: 10px;
+}
+
+
+.login{
+border: 1px solid #06365f;
+border-radius: 0.2em;
+background: linear-gradient(#6e91af, #4f799d);
+color: white;
+width: 80px;
+height: 20px;
+display: flex;
+justify-content: space-between;
+font-size: 18px;
+box-shadow: #06365f;
+text-decoration: none;
+padding: 20px 20px;
+}
+h1{
+  color: #06365f;
+  font-size: 1.5em;
+}
+
+
+footer ul{
+  color: #1c5380;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: space-around;
+  margin: 10px 20px;
+  padding: 0 100px;
+  text-transform: uppercase;
+  font-size: 300;
+  list-style: none;
+}
+  
+.copyright{
+  color: #c9caca;
 }
