--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@ body {
   align-items: center;
   justify-items: center;
   flex-direction: column;
-  padding: 0 19%;
+  padding: 0 18%;
 }
 
 .container {
@@ -52,6 +52,10 @@ body {
   align-items: center;
   justify-content: space-between;
   padding: 15px 0;
+}
+
+.home-page {
+  text-decoration: none;
 }
 
 .login {
@@ -104,4 +108,24 @@ body {
 
 .download-google {
   text-decoration: none;
+}
+
+.footer {
+  background-color: saddlebrown;
+  display: flex;
+  text-align: center;
+  justify-content: space-around;
+  width: 60%;
+  padding: 10px 25px;
+}
+.footer a {
+  text-decoration: none;
+  color: #1c5380;
+  text-transform: uppercase;
+  font-size: 0.75em;
+  font-weight: 700;
+}
+
+.footer .copyright {
+  color: grey;
 }
