--- a/styles/style.css
+++ b/styles/style.css
@@ -10,8 +10,8 @@ body {
   background-image:url(/images/bgtile.png);
   background-repeat:repeat-x;
   background: linear-gradient(#1c5380,#1c5380);
-  display:flex;
-  flex-direction:colum;
+  border: 1px solid #1c5380;
+  z-index: -99999;
 }
 
 
