--- a/styles/style.css
+++ b/styles/style.css
@@ -6,5 +6,113 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 80px;
+  background-color: white;
+  background-image: url(/images/bgtile.png);
+  background-repeat: repeat-x;
+  display: flex;
+  flex-direction: column;
+}
+
+p {
+  font-size: .9em;
+  font-weight: 300;
+  margin-bottom: 30px;
+}
+
+h1 {
+  font-size: 1.5em;
+  color: #06365f;
+}
+
+nav ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  list-style: none;
+}
+
+li {
+  margin: 10px;
+  text-transform: uppercase;
+  font-size: smaller;
+  font-weight: 800;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #1c5380;
+}
+
+main {
+  display: flex;
+  align-self: center;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 70%;
+  margin-bottom: 50px;
+}
+
+.mainbox {
+  width: 500px;
+  margin-left: 40px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.header img {
+  width: 60%;
+}
+
+/*.login {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-image: url(/images/bgtile.png);
+  border:  1px solid #1c5380;
+  font-size: smaller;
+  font-weight: 800;
+  padding: 10px 20px;
+  box-shadow: 2px #1c5380;
+  border-radius: 2px;
+}*/
+
+.login {
+  background: linear-gradient(#618eb3, #3c698f);
+  font-weight: 800;
+  border:  2px solid #1c5380;
+  border-radius: 5px;
+  padding: 15px 5px 0 10px;
+  width: 100px;
+}
+
+.login img {
+  width: 30%;
+  margin-right: 10px;
+}
+
+.login a {
+  text-decoration: none;
+  color: white;
+}
+
+.infobox {
+  display: flex;
+  flex-direction: column;
+  background-image: url(/images/frame.png);
+  background-repeat: no-repeat;
+  max-width: 500px;
+  padding: 30px;
+}
+
+.buttons a {
+  margin-right: 15px;
+}
+
+.copy {
+  color: gray;
 }
