--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,123 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(/images/bgtile.png);
+  background-repeat: repeat-x;
+  display: flex;
+  justify-content: center;
+  flex-flow: column wrap;
+}
+
+.bkg {
+  display: flex;
+  justify-content: center;
+  padding-top: 100px;
+
+}
+.image {
+  padding-right: 50px;
+}
+
+.logo-bar {
+  width: 504px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 40px;
+
+}
+
+.logo-img {
+  height: 50px;
+  padding-bottom: 20px;
+}
+
+.login-btn {
+  height: 35px;
+  width: 85px;
+  border: 2px solid #1c5380;
+  display: flex;
+  align-content: center;
+  border-radius: 5%;
+  background: #6993B3;
+  background: -moz-linear-gradient(top, #6993B3 0%, #5683a7 50%, #42749C 100%);
+  background: -webkit-linear-gradient(top, #6993B3 0%, #5683a7 50%, #42749C 100%);
+  background: linear-gradient(to bottom, #6993B3 0%, #5683a7 50%, #42749C 100%);
+  
+}
+
+.login-btn img {
+  height: 18px;
+  padding-top: 7px;
+  padding-left: 5px;
+  padding-right 5px;
+}
+
+.login-btn a {
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
+  padding-top: 4px;
+  padding-right 5px;
+  padding-left: 5px;
+  font-size: 15px;
+
+}
+
+.main-cnt {
+  width: 504px;
+}
+
+.text-cnt {
+  background-image: url(/images/frame.png);
+  background-repeat: no-repeat;
+  padding: 15px 50px;
+  text-align: left;
+}
+
+h1 {
+  color: #06365f;
+  font-size: 24px;
+  line-height: 30px;
+  
+}
+
+.text-cnt p {
+  font-weight: normal;
+  
+}
+
+.dwnld-img {
+  width: 504px;
+  padding-left: 35px;
+}
+.dwnld-img img {
+  padding: 10px;
+  height: 50px;
+}
+
+footer {
+  margin-left: 200px;
+  margin-right: 200px;
+  margin-bottom: 100px;
+}
+.footer-list {
+  list-style-type: none;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 12px;
+  color: #1c5380;
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 100px;
+}
+
+.footer-list li {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.copyright {
+  color: grey;
+
 }
