--- a/styles/style.css
+++ b/styles/style.css
@@ -79,7 +79,7 @@ light blue: #1c5380
     margin-bottom: 20px;
   }
   
-  .Down img{
+  .Down a{
     width: 200px;
     margin-left: 40px;
   }
@@ -87,17 +87,21 @@ light blue: #1c5380
   footer ul{ 
     display:flex;
     flex-direction: row;
-    text-decoration: none;
     justify-content: space-between;
     list-style: none;
     margin: 50px 350px;
+    
+  }
+
+  footer a{
+    text-decoration: none;
     text-transform: uppercase;
     color: #1c5380;
     font-weight: 700;
     font-size: 15px;
   }
   
-  .Colorspecialfooter{
+  footer p{
   color: #DFDBDA;
   }
   
