--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,102 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+  padding: 0;
+  margin: 0;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  
+    background-image: url("../images/bgtile.png");
+    background-repeat: repeat-x;
+    
+  
+}
+
+h1 {
+  color: #06365f;
+}
+
+
+
+.column {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 50px 100px 0 100px;
+  
+}
+
+.logo {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+
+section {
+  padding: 50px 50px;
+  margin-top: 10px;
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+
+}
+.footer ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.phones {
+  
+  margin: 50px;
+}
+
+.log-in {
+  background-image: url("../images/bgtile.png");
+  color: #ffffff;
+  text-decoration: none;
+  padding: 20px;
+  font-weight: bold;
+}
+
+.home {
+  width: 20px;
+  padding-right: 5px;
+}
+
+section {
+  background-color: #ffffff;
+  
+}
+
+p {
+  word-spacing: 1px;
+  letter-spacing: .5px;
+  line-height: 2em;
+}
+
+.download-btns img {
+  margin-right: 20px;
+  margin-top: 40px;
+}
+
+.footer { 
+  margin: 0 200px 50px;
+  padding: 0 100px;
+  text-transform: uppercase;
+  font-size: 1em;
+  font-weight: bold;
+  color: #1c5380;
+}
+
+span {
+  color: darkgrey;
 }
