--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,39 @@
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 80px;
-  background-color: white;
+  margin: 0px;
   background-image:url(/images/bgtile.png);
   background-repeat:repeat-x;
-  background: linear-gradient(#1c5380,#1c5380);
-  border: 1px solid #1c5380;
-  z-index: -99999;
   }
+
+  .first-part
+
+
+  mobiles-section
+
+
+  .second-part
+
+  brand
+
+
+
+
+  nav ul {
+    display:flex;
+    flex-direction:row;
+    list-style: none;
+    justify-content: center;
+  }
+
+  li {
+  margin:10px;
+ font-size:smaller;
+  text-transform:uppercase;  
+  font-weight: 700;
+  }
+
+  nav ul li a {
+    text-decoration: none;
+    color: #1c5380;
+  }
+
