--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,12 @@
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0px;
-  background-image:url(/images/bgtile.png);
-  background-repeat:repeat-x;
   }
 
-  .first-part
-
+  .first-part  { 
+  background-image:url(/images/bgtile.png);
+  background-repeat:repeat-x;
+}
 
   mobiles-section
 
