--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,10 @@ body {
   .first-part  { 
   background-image:url(/images/bgtile.png);
   background-repeat:repeat-x;
+  border: 1px solid #1c5380;
+  border-radius:5px;
+  padding: 15px 5px 0 10px;
+  width: 100px;
 }
 
   mobiles-section
