--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,92 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+  padding: 0;
+  margin: 0;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+h1 {
+  color: #06365f;
+}
+
+.back{
+  width: 100%;
+  height: 300px;
+  z-index: -1;
+  position: absolute;
+  
+}
+.columns {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding-top: 125px;
+  padding-right: 150px;
+  padding-left: 150px;
+}
+
+.container {
+  position: relative;
+  justify-content: left;
+  padding: 20px;
+ 
+}
+
+.text {
+  position: absolute;
+  top: 51px;
+  left: 55px;
+  right: 85px;
+}
+
+.text p {
+  font-size: 14px;
+}
+
+.logo {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.download {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding-left: 35px;
+  padding-right: 150px;
+}
+
+.title {
+  padding-bottom: 15px;
+}
+
+.nav-bar ul{
+  padding-left: 300px;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 300px;
+  padding-top: 50px;
+
+}
+
+a {
+  text-decoration: none;
+  color:#1c5380;
+  text-transform: uppercase;
+  font-size: small;
+  font-weight: bold;
+}
+
+.copy {
+  color: #b9b7b7;
+  font-weight: bold;
 }
