--- a/styles/style.css
+++ b/styles/style.css
@@ -40,14 +40,13 @@ h1 {
 
 
   .navegation {
-  list-style: none;
   margin:10px;
   font-size:smaller;
   text-transform:uppercase;  
   font-weight: 700;
   text-decoration: none;
   color: #1c5380;
-  flex-direction: row;
+  display: flex;
   }
 
 
