--- a/styles/style.css
+++ b/styles/style.css
@@ -38,22 +38,23 @@ h1 {
   color: #06365f;
 }
 
-.navegation {
-  padding: 70px;
+nav ul {
   display: flex;
   flex-direction: row;
-  width: 100%;
-  justify-content: space-around;
-  margin-bottom: 100px;
+  justify-content: center;
+  list-style: none;
 }
 
-  .navegation_2 {
-  margin:0px 0px 0px 0px;
-  font-size:smaller;
-  text-transform:uppercase;  
-  font-weight: 700;
+li{
+  margin:10px;
+  text-transform: uppercase;
+  font-size: smaller;
+  font-weight: 800;
+}
+
+nav ul li a{
   text-decoration: none;
-  color: #1c5380;
-  }
+  color:#1c5380;
+}
 
 
