--- a/styles/style.css
+++ b/styles/style.css
@@ -21,11 +21,20 @@ body {
 
   .second-part
 
-  .brand{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
-  }
+.login{
+  margin: 0;
+  position: absolute;
+  left: 50%;
+  margin-bottom:70px;
+  transform: translate(-50%);
+  text-decoration: none;
+  color: white;
+  background-color: black;
+  box-shadow: 8px 8px 0 rgba(128,83,35,.2);
+  padding: 20px 70px; 
+  font-size: 25px;
+  text-align: center;
+}
 
   .title {
     flex-direction:column;
