--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,86 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: url('../images/bgtile.png');
+  background-repeat: repeat-x;
 }
+
+h1 {
+  color: #06365f;
+}
+
+main {
+  display: flex;
+  flex-direction: row; 
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+  margin-top: 50px; 
+}
+
+
+.movil img {
+  display: block; 
+  margin: auto; 
+  justify-items: center;
+  padding: 50px; 
+}
+
+
+.container1 {
+  width: 620px; 
+  display: flex; 
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px; 
+  padding: 0px 10px;
+}
+
+.boton {
+  display: flex;
+  align-items: center; 
+  background-color: #1c5380;
+  border: none; 
+  width: 100px;
+  height: 50px; 
+  color: white;
+  justify-content: space-around;
+  background: linear-gradient(to top, #1c5380, #4b7699);
+  border-radius: 5px;
+}
+
+.container2 {
+  width: 600px; 
+  background: url('../images/frame.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 20px;
+}
+
+.container2 img {
+  margin-top: 20px;
+}
+
+/* NAV */
+
+nav ul {
+  list-style: none; 
+  display: flex; 
+  justify-content: center; 
+  text-align: center; 
+}
+
+nav a {
+  text-decoration: none;
+  color: #1c5380; 
+  text-transform: uppercase;
+  font-weight: bold;
+  
+}
+
+nav li {
+  color: grey; 
+  padding: 20px; 
+}
+
