--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@ body {
   flex-direction: column;
   }
 
-  .first-part  { 
+  .mobiles-section { 
   padding: 250px 0px 0px 250px;
   width: 100px;
  }
