--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,90 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+
+section {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.upper-elements{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#brand{
+  width: 80%;
+}
+
+.login-btn{
+  background-color: #1c5380;
+  width: 20%;
+  padding: 1% 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#login-txt{
+  text-decoration: none;
+  color: #FFFFFF;
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+
+.text{
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding: 30px;
+  border:none;
+  width:fit-content;
+}
+
+.androidApp{
+  margin-left: 30px;
+}
+
+h1{
+  color:#06365f;
+}
+
+.central-element{
+  width: 45%;
+  margin: 20px 100px 0 50px;
+}
+
+nav{
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+nav ul{
+  display:flex;
+  list-style: none;
+  justify-content: space-between;
+  width:50%;
+}
+
+
+nav a{
+  color:#1c5380;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+span{
+  color: #A29E9E;
+  font-weight: bold;
+  margin-left: 20px;
 }
