--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,10 @@ body {
   flex-direction: column;
   }
 
+   .mobiles-section{
+    display: flex;
+   }
+
   .first-part { 
     margin-top: 35px;
     margin-left: 75px;
