--- a/styles/style.css
+++ b/styles/style.css
@@ -30,11 +30,15 @@ body {
 .login{
   background-color: #1c5380;;
   padding: 20px 70px;
+  margin-left: 40px;
   margin-top: 60px;
   margin-right: 60px;
   text-decoration: none;
   font-size: 24px;
   color: white;
+  width: 70px;
+  text-align: right;
+  border-radius: 5px;
 }
 
 h1 {
