--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,9 @@ body {
   flex-direction: column;
   }
 
+  .back-colour{
+    background-color: #1c5380;
+  }
    .mobiles-section{
     display: flex;
    }
